Fix addOpen for Exe
Fix AddOpen for launch4j Exe until https://github.com/orphan-oss/launch4j-maven-plugin/issues/423 finds something better